--- a/page1.html
+++ b/page1.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>p-1</title>
 </head>
 <body>
-    <h1>Mama's collections</h1>
-    <a href="./hobo/page1.html">Bhindi-mms-1</a>
+    <h1>Bhindi ka chut</h1>
 </body>
 </html>
