--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Mama's collections</h1>
-    <a href="./hobo/page1.html">Bhindi-mms-1</a>
+    <a href="./page1.html">Bhindi-mms-1</a>
 </body>
 </html>
